[all] remove compile warnings for java 11